enviroment/yaml/ingress/asd.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-web-old-5-11-0
  namespace: dev
  labels:
    rule: ingress-web-old-5-11-0
    env: dev
    version: 5-11-0
spec:
  rules:
    - host: web.dev.bonree.cc
      http:
        paths:
          - path: /5-11-0/
            backend:
              serviceName: web-old-5-11-0
              servicePort: 38084
