enviroment/yaml/ingress/ingress-web-old.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-appName-appVersion
  namespace: dev
  labels:
    rule: ingress-appName-appVersion
    env: dev
    version: appVersion
spec:
  rules:
    - host: web.dev.bonree.cc
      http:
        paths:
          - path: /appVersion/
            backend:
              serviceName: appName-appVersion
              servicePort: appPort
